--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
 altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
 asgiref==3.5.2
+# note
+beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
 Django==4.1.3
+django-extensions==3.2.1
 future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+idna==3.4
 macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
 mysqlclient==2.1.1
+numpy==1.23.5
+Pillow==9.3.0
+random-username==1.0.2
+# note
+requests==2.28.1
 six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
+urllib3==1.26.13
